# lagrangian-mbrl-franka

./: .gitignore  CHANGELOG.md  PROJECT_PLAN.md  README.md  pyproject.toml  requirements.txt
configs/: config.yaml
configs/benchmark/: dynamics_offline.yaml
configs/benchmark/experiments/: full.yaml  quick.yaml  sample_efficiency.yaml
configs/experiment/: dln_mbrl.yaml  ppo_baseline.yaml
configs/model/: dln.yaml  mlp.yaml
docs/: architecture.md  experiments_protocol.md  rl_quickstart.md  setup_guide.md
scripts/: evaluate.py  fit_dynamics_offline.py  launch.py  play_rl.py  run_benchmark.py  train.py  train_rl.py
src/lagrangian_mbrl/: __init__.py  cli.py  offline.py
src/lagrangian_mbrl/envs/: __init__.py  analytic_systems.py  franka_reach_wrapper.py
src/lagrangian_mbrl/eval/: __init__.py  metrics.py
src/lagrangian_mbrl/mbrl/: __init__.py  training_loop.py
src/lagrangian_mbrl/models/: __init__.py  deep_lagrangian_network.py  mlp_dynamics.py
src/lagrangian_mbrl/pipeline/: __init__.py  benchmark.py  data.py  experiment.py  hpo.py  registry.py
src/lagrangian_mbrl/rl/: __init__.py  franka_reach_env_cfg.py  tasks.py
src/lagrangian_mbrl/rl/agents/: __init__.py  rsl_rl_ppo_cfg.py
src/lagrangian_mbrl/utils/: __init__.py  logging.py  seeding.py
tests/: test_analytic_systems.py  test_dln.py  test_metrics.py  test_offline.py  test_package.py  test_pipeline.py  test_rl_env_cfg.py  test_utils.py
theory/: derivations.md  dynamics_models.tex  references.bib
