[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lagrangian-mbrl-franka"
version = "0.1.0"
description = "Physics-guided model-based RL with Deep Lagrangian Networks for the Franka Panda in Isaac Lab"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Santiago" }]
keywords = [
    "reinforcement-learning",
    "model-based-rl",
    "deep-lagrangian-networks",
    "physics-informed-ml",
    "isaac-lab",
    "franka",
    "robotics",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

# NOTE: Isaac Sim / Isaac Lab are installed separately via their own installer
# and are intentionally NOT listed here. See docs/setup_guide.md.
dependencies = [
    "torch>=2.1,<3.0",
    "numpy>=1.24,<2.0",
    "scipy>=1.10",
    "gymnasium>=0.29",
    "hydra-core>=1.3",
    "omegaconf>=2.3",
    "pyyaml>=6.0",
    "tqdm>=4.65",
    "wandb>=0.16",
    "tensorboard>=2.14",
    "matplotlib>=3.7",
    "pandas>=2.0",
    "rliable>=1.0.8",       # stratified bootstrap CIs for RL results
]

[project.optional-dependencies]
rl = [
    "rsl-rl-lib>=2.0",      # PPO baseline (Isaac Lab default trainer)
    "skrl>=1.1",            # alternative RL library
]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "ruff>=0.4",
    "black>=24.0",
    "mypy>=1.8",
    "pre-commit>=3.6",
]

[project.urls]
"Homepage" = "https://github.com/<user>/lagrangian-mbrl-franka"
"Project Plan" = "https://github.com/<user>/lagrangian-mbrl-franka/blob/main/PROJECT_PLAN.md"

[project.scripts]
lmbrl-train = "lagrangian_mbrl.cli:train_entrypoint"
lmbrl-eval = "lagrangian_mbrl.cli:eval_entrypoint"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
markers = [
    "slow: trains models / longer-running (Phase-0 offline comparison).",
]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
